2010-04-20  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (cua-global-keymap): Bind <M-RET> to
	cua-set-rectangle-mark for putty.

	* init-misc.el: Enable tabbar in terminal.

	* init-basic.el ([f7]): Let f7 global.

2010-04-19  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Enable auto-complete-mode for fundamental-mode.
	: Disable cursor-chg and tabbar in terminal.

	* init-basic.el: Bind ESC-f4 to kill-this-buffer.
	: Bind <select> to move-end-of-line, for putty.

	* init-site.el: Bind M-f2 to viss-bookmark-next-buffer.

	* init-basic.el: Disable global-hl-line-mode.

	* init-site.el: Add semantic-ia-fast-jump-or-back, bind to f12.

2010-04-16  Meteor Liu  <meteor1113@gmail.com>

	* dotemacs.sample: Rename to .emacs.

	* init-misc.el (highlight-tail-mode): Disable highlight-tail-mode
	in default.

2010-04-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: For compatible with emacs-22.

	* dotemacs.sample: Edit dotemacs.sample.
	To Unix Lf.

2010-04-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Improve gud-break-or-remove and gud-enable-or-disable.
	("org"): Redefine org-mode key map.
	(fboundp): Fix nxml-mode bug.

2010-04-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Remove imenu bound(mouse3), use C-mouse3 instead.

2010-04-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add indicate-buffer-boundaries.
	: Enable linum-mode in linux.

2010-03-29  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Bind S-f12 to semantic-mrub-switch-tags.

	* dotemacs.sample: Add.

2010-03-18  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Bind key to semantic-tag-folding-fold-block and
	semantic-tag-folding-show-block.
	: Bind S-f12 to pop-global-mark.

2010-03-17  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Rebind key for recent-jump.

2010-03-16  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Use drag-stuff instead of move-line-up and
	move-line-down.

2010-03-04  Meteor Liu  <meteor1113@gmail.com>
