@@ -1,3 +1,7 @@
+2010-04-22  Meteor Liu  <meteor1113@gmail.com>
+
+	* lisp/unicad.el: Update unicad to 1.1.5
+
 2010-04-20  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (cua-global-keymap): Bind <M-RET> to
